--- a/README
+++ b/README
@@ -1,9 +1,7 @@
-$Header$
-
 MBDyn (C) is a multibody analysis code.
 http://www.mbdyn.org
 
-Copyright (C) 1996-2017
+Copyright (C) 1996-2019
 
 Pierangelo Masarati     <masarati@aero.polimi.it>
 Paolo Mantegazza        <mantegazza@aero.polimi.it>
@@ -16,37 +14,7 @@ http://www.aero.polimi.it
 
 developers:
 
-	- check out from the CVS tree
-	- run "sh ./bootstrap.sh" to generate ancillary files.
-	  May need some tailoring.  A system with working autoconf, 
-	  automake and libtool is required; I'm currently using 
-	  autoconf 2.59, automake 1.9.6, libtool 1.5.6
-	- tar the tree and move to the target system; this way, all
-	  the ancillary files will be available even if the target 
-	  system does not have those tools.
-
-
-
-developers without CVS access:
-
-	- ask for a snapshot from the CVS
-	- merge: two approaches; either
-		1) post patches to the checked out sources;
-		   assuming mbdyn-HEAD is the original snapshot,
-		   and mbdyn-DEVEL is the locally modified version,
-		   run
-
-	diff -uNr mbdyn-HEAD mbdyn-DEVEL > AUTHOR-DATE-DESC.patch
-
-		   where
-			- AUTHOR is the name of the Author,
-			- DATE is the date of the snapshot,
-			- DESC is a short description of the modifications.
-
-		   Or
-
-		2) post the modified source tree, including the CVS
-		   directories and their contents, unmodified
+	see CONTRIBUTING.md in the root directory of the source tree
 
 
 
@@ -69,9 +37,9 @@ distribution:
 
 installation:
 
-	- get a working source tree, either by following the "developers"
-	  or the "distribution" instructions or from the web site
-	  <http://www.aero.polimi.it/~mbdyn/>
+	- clone the source tree from this repo or download a release 
+	  from the website (https://www.mbdyn.org/?Software_Download)
+	- (if needed) run "sh bootstrap.sh" to generate configure scripts
 	- configure the package; "./configure" will suffice in most cases,
 	  unless you need some of the supported packages and they are not 
 	  in the standard place
@@ -81,5 +49,5 @@ installation:
 	  in "$PREFIX/lib" (PREFIX defaults to /usr/local/mbdyn).
 	  Those libraries are neither required to run mbdyn nor the utilities
 	  (unless you force the shared build).
-	  A bare-bone man page will be installed in "$PREFIX/man/man1".
+	  A bare-bone man page will be installed in "$PREFIX/share/man/man1".
  
